# Social-Club-Backtend

./: README.md  db.sqlite3  pyproject.toml
socialclub/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_rename_user_people.py  0003_alter_people_profilepicture.py  0004_alter_people_profilepicture.py  0005_alter_people_profilepicture.py  0006_people_gender_alter_people_email.py  0007_alter_people_email_alter_people_firstname_and_more.py  0008_alter_people_email.py  0009_alter_people_email.py  0010_people_password.py  0011_events.py  0012_rename_events_event.py  0013_event_eventcreator.py  0014_event_eventparticipants.py
